--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,8 +7,7 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/adView">
+        android:layout_height="match_parent">
 
         <include layout="@layout/toolbar" />
 
@@ -28,7 +27,7 @@
 
                 <fragment
                     android:id="@+id/frag_list"
-                    class="anuj.wifidirect.wifi.DeviceListFragment"
+                    class="example.wifidirect.wifi.DeviceListFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <!-- Preview: layout=@layout/row_devices -->
@@ -36,7 +35,7 @@
 
                 <fragment
                     android:id="@+id/frag_detail"
-                    class="anuj.wifidirect.wifi.DeviceDetailFragment"
+                    class="example.wifidirect.wifi.DeviceDetailFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <!-- Preview: layout=@layout/device_detail -->
@@ -46,12 +45,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
 </RelativeLayout>
