--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <include layout="@layout/toolbar" />
 
@@ -32,6 +33,6 @@
                 <!-- Preview: layout=@layout/device_detail -->
             </fragment>
         </LinearLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 
 </RelativeLayout>
